# projet1

./: .env.example  .gitignore  AUTH_MODES.md  Dockerfile  MIGRATION_FLASK_TO_FASTAPI.md  SPEECH_PRIVATE_ENDPOINT.md  app.py  docker-entrypoint.sh  gitlab-ci.yml  main.py  main_fastapi.py  pyproject.toml  requirements.txt  requirements.txt__
app/: __init__.py  config.py  exceptions.py
app/dependencies/: __init__.py  auth.py  session.py
app/middleware/: __init__.py  logging.py  session.py
app/models/: __init__.py  chat.py  faq.py  habilitations.py  profile.py  rating.py  synthesis.py  user.py
app/routers/: __init__.py  admin.py  auth.py  chat.py  faq.py  files.py  history.py
auth/: gauthiq.py  gauthiq_d.py
certs/: ca-bundle.crt  ca-bundle.trust.crt  postfix.pem  sendmail.pem
core/: __init__.py  async_logger.py  azure_sync.py  fonctions.py  fonctions_fileshare.py  habilitations_manager.py  logging_config.py  profil_manager.py  prompt_synthese.py  security.py  storage_manager.py  synthetiser.py
core/old/: prompt_synthese_20251103.py  prompt_synthese_OK_avant_evol.py  prompt_synthese_v1.py  prompt_synthese_v1__OK_avant_evol.py  prompt_synthese_v2.py  synthetiser_v1.py  synthetiser_v2.py
data/: dataset_scenarios.json  jeu_de_personnages.json  liste_des_voix.txt
data/admin/: habilitations_config.json  journal.csv
data/documentations/: CHANGEMENTS_SECURITE_SPEECH.md  CHECKLIST_SECURITE_SPEECH.md  COMPARAISON_DEV_PROD.md  CORRECTION_VALIDATION_GR_GF.md  DEPLOIEMENT_SECURITE_SPEECH.md  DIAGNOSTIC_TOKEN_ERROR.md  DOCKER_FILESHARE.md  EXEMPLE_INTEGRATION_PRODUCTION.md  GROUPE_SPECIAL_ALL.md  GUIDE_TEST_UI_HABILITATIONS.md  HABILITATIONS_README.md  HABILITATIONS_TEMPS_REEL.md  (+29 more)
log/: README_LOGGING.md
scripts/: diagnose_speech_azure.sh  fix_vnet_speech.sh  test_json_encoding.py  test_speech_config.py
templates/: admin.html  admin_habilitations.html  error.html  faq.html  fileshare_browser.html  history.html  iframe_redirect.html  index.html  load_conversations.html  login.html  redirect_parent.html  suivi_syntheses.html  unauthorized.html
tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_models.py  test_security.py
(+41 files in other folders)
