[project]
name = "gma-training-bot-ihm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.0",
    "azure-ai-documentintelligence>=1.0.2",
    "azure-ai-formrecognizer>=3.3.3",
    "azure-cognitiveservices-speech>=1.43.0",
    "azure-common>=1.1.28",
    "azure-core>=1.33.0",
    "azure-identity>=1.21.0",
    "azure-storage-blob>=12.25.1",
    "dotenv>=0.9.9",
    "elasticsearch>=9.0.2",
    "flask==3.0.0",
    "flask-cors>=5.0.1",
    "flask-session>=0.8.0",
    "gunicorn>=23.0.0",
    "openai>=1.76.0",
    "pdfkit>=1.0.0",
    "poetry>=2.1.3",
    "tqdm>=4.67.1",
    "concurrent-log-handler==0.9.25",
    "azure-storage-file-share>=12.22.0",
    "redis>=6.4.0",
    "azure-monitor-opentelemetry>=1.8.1",
    "pytest>=9.0.1",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.15.1",
]
