[project]
name = "gma-training-bot-ihm"
version = "2.0.0"
description = "GMA Training Bot IHM - FastAPI Edition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "jinja2>=3.1.2",
    "itsdangerous>=2.1.2",

    # Authentication & Security
    "authlib>=1.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Azure Services
    "azure-ai-documentintelligence>=1.0.2",
    "azure-ai-formrecognizer>=3.3.3",
    "azure-cognitiveservices-speech>=1.43.0",
    "azure-common>=1.1.28",
    "azure-core>=1.33.0",
    "azure-identity>=1.21.0",
    "azure-storage-blob>=12.25.1",
    "azure-storage-file-share>=12.22.0",
    "azure-monitor-opentelemetry>=1.8.1",

    # OpenAI
    "openai>=1.76.0",

    # Database & Search
    "elasticsearch>=9.0.2",
    "redis>=6.4.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pdfkit>=1.0.0",
    "tqdm>=4.67.1",
    "concurrent-log-handler==0.9.25",
    "requests>=2.32.0",

    # Testing
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.15.1",
    "httpx>=0.27.0",
]
